Update: #64: Fixed volume bar z-index

--- a/theme/musicco.css
+++ b/theme/musicco.css
@@ -695,7 +695,6 @@
 		position: absolute;
 		bottom: 10%;
 		right: 3%;
-		z-index: 2;
 		background: transparent;
 		box-shadow: 20px -20px 50px 50px #2222221f
 	}
